2007-11-14  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Justin Garcia.

        http://bugs.webkit.org/show_bug.cgi?id=15781
        REGRESSION: Ligatures fail to form when typing in Devanagari (because WebKit can't handle
        a marked range that covers half of a composed character sequence)

        * platform/mac/editing/input/devanagari-ligature-expected.checksum: Added.
        * platform/mac/editing/input/devanagari-ligature-expected.png: Added.
        * platform/mac/editing/input/devanagari-ligature-expected.txt: Added.
        * platform/mac/editing/input/devanagari-ligature.html: Added.

2007-11-14  Antti Koivisto  <antti@apple.com>

        Try to make this test less timing dependent.

        * http/tests/media/video-play-stall.html:

2007-11-14  Beth Dakin  <bdakin@apple.com>

        Reviewed by Hyatt.

        Tests for <rdar://problem/5540855> REGRESSION: Combination of 
        client-side image map and <a> tag is not working properly (15522)

        New test:
        * fast/images/image-map-anchor-children.html: Added.
        * fast/images/resources/boston.gif: Added.
        * platform/mac/fast/images/image-map-anchor-children-
        expected.checksum: Added.
        * platform/mac/fast/images/image-map-anchor-children-expected.png: 
        Added.
        * platform/mac/fast/images/image-map-anchor-children-expected.txt: 
        Added.
        
        This test was broken and is fixed now! I had to edit the test 
        itself because it was written in the html that the two <map> 
        examples were failing, but now they succeed. 
        * fast/invalid/residual-style.html:
        * platform/mac/fast/invalid/residual-style-expected.checksum:
        * platform/mac/fast/invalid/residual-style-expected.png:
        * platform/mac/fast/invalid/residual-style-expected.txt:

2007-11-14  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Alexey Proskuryakov.
        