@@ -10,8 +10,8 @@ function runTest() {
         window.layoutTestController.setMainFrameIsFirstResponder(false);
         
         window.layoutTestController.setWindowIsKey(false);
-        window.layoutTestController.setWindowIsKey(true);
-        window.layoutTestController.setWindowIsKey(false);
+//        window.layoutTestController.setWindowIsKey(true);
+//        window.layoutTestController.setWindowIsKey(false);
     }
 }
 
