@@ -1,0 +1,22 @@
+<html>
+<head>
+<script>
+function runTest() {
+    if (window.layoutTestController) 
+        layoutTestController.dumpAsText();
+    
+    try {    
+        var db = openDatabase('5562470Test', '', 'Test for <rdar://problem/5562470> openDatabase does not work when the version string is empty', 1);
+    } catch (e) {
+        document.getElementById('result').innerHTML = 'FAILURE'
+    }
+}
+</script>
+</head>
+<body onload="runTest()">
+<div>This tests that calling openDatabase with an empty version string does not cause an exception to be thrown.
+<div id="result">
+SUCCESS! Did not throw an exception.
+</div>
+</body>
+</html>
